# churn-retention-analytics

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: README.md  retention_simulator.py  streamlit_app.py
data/: README.md
docs/: README.md  stage_1_data.md  stage_2_sql.md  stage_3_eda.md  stage_4_modeling.md  stage_5_simulator.md
eda_outputs/: README.md  key_insights.txt
models/: README.md  logistic_model.joblib  preprocessing.joblib  rf_model.joblib
notebooks/: README.md  eda_exploration.ipynb
pipeline/: README.md  data_generator.py  train_model.py
sql/: README.md  churn_features.sql  data_quality.sql  staging.sql
src/: README.md  data_generator.py  eda.py  retention_simulator.py  run_sql_pipeline.py  train_model.py
src/notebooks/: eda_churn_analysis.ipynb
