[project]
name = "churn-retention-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.3",
    "llvmlite>=0.40.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    # "shap",  # Temporarily commented out - requires C++ build tools
    "streamlit>=1.52.2",
]
